media/gpu/V4L2VEA: Fix wrong V4L2PixFmtToVideoPixelFormat call on V4L2VEA

V4L2VEA wrongly calls V4L2Device::V4L2PixFmtToVideoPixelFormat to
VideoPixelFormat in VideoFrameLayout::Create. Just pass the VideoPixelFormat
without calling.

BUG=chromium:907132
TEST=VEA unittest on peach_pit

Change-Id: I3800cc81403a19e7521f724f972f63e937f0873b
Reviewed-on: https://chromium-review.googlesource.com/c/1345700
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Hirokazu Honda <hiroh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609936}
Former-commit-id: f1abe1e001199d15e7b15e15ab3864809cf31aa7